Cover all customer questions: contention scaling, 16MB txn limit, CPU hotspot, bad SQL patterns
- Demo 2: Added section showing why more pods/threads on hot rows lowers TPS
  (more concurrent writers = more 40001 retries = wasted work)
- Demo 6: Reworked to show KB-sized multi-statement transactions accumulating
  toward the 16MB transaction limit (not just single large rows). Added deep
  dive on 'split failed while applying backpressure to Put' errors.
- Demo 7: Added section explaining why SERIAL PKs cause elevated CPU on one
  node (all writes routed to one leaseholder, other nodes idle)
- DemoRunner: Added consolidated Bad SQL Patterns table printed after 'all'
- README: New coverage matrix rows (3a, 7a, 8a, 24), updated demo descriptions,
  new Bad SQL Patterns section, 3 additional doc reference links